Enhance layout and styling in index.html

--- a/index.html
+++ b/index.html
@@ -31,6 +31,23 @@
             box-shadow: 0 4px 6px rgba(0,0,0,0.1);
         }
 
+        header nav {
+            margin-top: 20px;
+        }
+
+        header nav a {
+            color: #1e3a8a;
+            text-decoration: none;
+            margin: 0 15px;
+            font-weight: 600;
+        }
+
+        .logo {
+            font-size: 2em;
+            font-weight: bold;
+            color: #1e3a8a;
+        }
+
         h1 {
             font-size: 3em;
             margin: 0;
@@ -56,6 +73,19 @@
             border-radius: 10px;
             max-width: 800px;
             margin: 0 auto;
+            text-align: center;
+        }
+
+        .hero h1 {
+            font-size: 2.5em;
+            margin-bottom: 20px;
+            color: #1e3a8a;
+        }
+
+        .hero p {
+            font-size: 1.2em;
+            margin-bottom: 30px;
+            color: #555;
         }
 
         .features {
@@ -71,6 +101,18 @@
             border-radius: 8px;
             box-shadow: 0 2px 8px rgba(0,0,0,0.1);
             transition: transform 0.3s ease;
+            text-align: center;
+        }
+
+        .feature-card h3 {
+            color: #1e3a8a;
+            margin-bottom: 15px;
+            font-size: 1.5em;
+        }
+
+        .feature-card p {
+            color: #555;
+            line-height: 1.6;
         }
 
         .feature-card:hover {
@@ -178,44 +220,46 @@
     </header>
 
     <section class="hero">
-        <h1>Welcome to Carbo Computer</h1>
-        <p>Innovative Technology Solutions for Your Digital Future</p>
-        <button class="cta-button">Get Started</button>
+        <div class="hero-content">
+            <h1>Welcome to Carbo Computer</h1>
+            <p>Innovative Technology Solutions for Your Digital Future</p>
+            <a href="https://www.carbocomputers.com" class="cta-button">Get Started</a>
+        </div>
     </section>
 
     <section class="services">
         <div class="container">
-            <h2>Our Services</h2>
+            <h2 style="text-align: center; color: #1e3a8a; font-size: 2em; margin-bottom: 40px;">Our Services</h2>
             <div class="services-grid">
-                <div class="service-card">
+                <div class="service-card feature-card">
                     <h3>Custom PC Builds</h3>
                     <p>High-performance systems tailored to your needs</p>
                 </div>
-                <div class="service-card">
+                <div class="service-card feature-card">
                     <h3>System Repairs</h3>
                     <p>Expert diagnostics and quick turnaround times</p>
                 </div>
-                <div class="service-card">
+                <div class="service-card feature-card">
                     <h3>Tech Support</h3>
                     <p>Professional assistance for all your computer needs</p>
                 </div>
             </div>
-        </section>
+        </div>
+    </section>
 
-        <section class="section">
-            <h2>Why Choose Carbo Computer?</h2>
-            <p>
-                With years of experience in the tech industry, we deliver cutting-edge solutions 
-                tailored to your needs. Our commitment to excellence and customer satisfaction 
-                sets us apart in the competitive technology landscape.
-            </p>
-        </section>
+    <section class="container" style="text-align: center; margin: 60px auto;">
+        <h2 style="color: #1e3a8a; font-size: 2em; margin-bottom: 20px;">Why Choose Carbo Computer?</h2>
+        <p style="max-width: 800px; margin: 0 auto; line-height: 1.8; color: #555; font-size: 1.1em;">
+            With years of experience in the tech industry, we deliver cutting-edge solutions 
+            tailored to your needs. Our commitment to excellence and customer satisfaction 
+            sets us apart in the competitive technology landscape.
+        </p>
+    </section>
 
-        <section class="cta-section">
-            <h2>Ready to Get Started?</h2>
-            <p>Contact us today to learn more about our services and how we can help transform your technology infrastructure.</p>
-            <button>Get in Touch</button>
-        </section>
-    </div>
+    <section style="text-align: center; padding: 60px 20px; background: linear-gradient(135deg, #74ACDF 0%, #ffffff 50%, #74ACDF 100%); margin-top: 60px;">
+        <h2 style="color: #1e3a8a; font-size: 2em; margin-bottom: 20px;">Ready to Get Started?</h2>
+        <p style="color: #555; margin-bottom: 30px; font-size: 1.1em;">Contact us today to learn more about our services and how we can help transform your technology infrastructure.</p>
+        <a href="https://www.carbocomputers.com" class="cta-button">Get in Touch</a>
+    </section>
 </body>
 </html>
