Add details for counties in Central East and Southwest

--- a/counrylist.html
+++ b/counrylist.html
@@ -103,4 +103,71 @@ header h1{font-size:1.8em;margin-bottom:8px}.content{padding:20px}
 <div class="region">
 <div class="region-header" onclick="toggle('ce')"><div><h2>Central East Florida</h2><span class="count">6</span></div><span class="arrow" id="a-ce">▼</span></div>
 <div class="grid" id="ce">
-<div class="card"><h3>Brevard</h3><div
+<div class="card"><h3>Brevard</h3><div class="info"><span class="lbl">Loc:</span> <a href="https://www.google.com/maps/search/?api=1&query=860+Camp+Rd+Sharpes+FL" target="_blank">860 Camp Rd, Sharpes</a></div><div class="info"><span class="lbl">Ph:</span> <a href="tel:3216901500">(321) 690-1500</a></div><a href="https://www.bcso.us" target="_blank" class="btn">Search</a></div>
+<div class="card"><h3>Indian River</h3><div class="info"><span class="lbl">Loc:</span> <a href="https://www.google.com/maps/search/?api=1&query=4055+41st+Ave+Vero+Beach+FL" target="_blank">4055 41st Ave, Vero Beach</a></div><div class="info"><span class="lbl">Ph:</span> <a href="tel:7725677500">(772) 567-7500</a></div><a href="https://www.ircsheriff.org" target="_blank" class="btn">Search</a></div>
+<div class="card"><h3>Orange</h3><div class="info"><span class="lbl">Loc:</span> <a href="https://www.google.com/maps/search/?api=1&query=2500+W+33rd+St+Orlando+FL" target="_blank">2500 W 33rd St, Orlando</a></div><div class="info"><span class="lbl">Ph:</span> <a href="tel:4078364500">(407) 836-4500</a></div><a href="https://www.ocfl.net/sheriff" target="_blank" class="btn">Search</a></div>
+<div class="card"><h3>Seminole</h3><div class="info"><span class="lbl">Loc:</span> <a href="https://www.google.com/maps/search/?api=1&query=100+Eslinger+Way+Sanford+FL" target="_blank">100 Eslinger Way, Sanford</a></div><div class="info"><span class="lbl">Ph:</span> <a href="tel:4076655000">(407) 665-5000</a></div><a href="https://www.seminolesheriff.org" target="_blank" class="btn">Search</a></div>
+<div class="card"><h3>Suwannee</h3><div class="info"><span class="lbl">Loc:</span> <a href="https://www.google.com/maps/search/?api=1&query=200+S+Ohio+Live+Oak+FL" target="_blank">200 S Ohio, Live Oak</a></div><div class="info"><span class="lbl">Ph:</span> <a href="tel:3863624044">(386) 362-4044</a></div><a href="https://www.suwanneesheriff.com" target="_blank" class="btn">Search</a></div>
+<div class="card"><h3>Volusia</h3><div class="info"><span class="lbl">Loc:</span> <a href="https://www.google.com/maps/search/?api=1&query=1601+W+New+York+Ave+Daytona+Beach+FL" target="_blank">1601 W New York Ave, Daytona Beach</a></div><div class="info"><span class="lbl">Ph:</span> <a href="tel:3862481777">(386) 248-1777</a></div><a href="https://www.vcso.us" target="_blank" class="btn">Search</a></div>
+</div>
+</div>
+
+<!-- SOUTHWEST (8) -->
+<div class="region">
+<div class="region-header" onclick="toggle('sw')"><div><h2>Southwest Florida</h2><span class="count">8</span></div><span class="arrow" id="a-sw">▼</span></div>
+<div class="grid" id="sw">
+<div class="card"><h3>Collier</h3><div class="info"><span class="lbl">Loc:</span> <a href="https://www.google.com/maps/search/?api=1&query=3319+Tamiami+Trail+E+Naples+FL" target="_blank">3319 Tamiami Trail E, Naples</a></div><div class="info"><span class="lbl">Ph:</span> <a href="tel:2397740100">(239) 774-0100</a></div><a href="https://www.colliersheriff.org" target="_blank" class="btn">Search</a></div>
+<div class="card"><h3>Glades</h3><div class="info"><span class="lbl">Loc:</span> <a href="https://www.google.com/maps/search/?api=1&query=1297+E+SR+78+Moore+Haven+FL" target="_blank">1297 E SR 78, Moore Haven</a></div><div class="info"><span class="lbl">Ph:</span> <a href="tel:8639466600">(863) 946-6600</a></div><a href="https://www.gladesso.com" target="_blank" class="btn">Search</a></div>
+<div class="card"><h3>Hendry</h3><div class="info"><span class="lbl">Loc:</span> <a href="https://www.google.com/maps/search/?api=1&query=101+S+Bridge+St+LaBelle+FL" target="_blank">101 S Bridge St, LaBelle</a></div><div class="info"><span class="lbl">Ph:</span> <a href="tel:8636743030">(863) 674-3030</a></div><a href="https://www.hendrysheriff.org" target="_blank" class="btn">Search</a></div>
+<div class="card"><h3>Lee</h3><div class="info"><span class="lbl">Loc:</span> <a href="https://www.google.com/maps/search/?api=1&query=14750+Six+Mile+Cypress+Fort+Myers+FL" target="_blank">14750 Six Mile Cypress, Fort Myers</a></div><div class="info"><span class="lbl">Ph:</span> <a href="tel:2394774000">(239) 477-4000</a></div><a href="https://www.sheriffleefl.org" target="_blank" class="btn">Search</a></div>
+<div class="card"><h3>Martin</h3><div class="info"><span class="lbl">Loc:</span> <a href="https://www.google.com/maps/search/?api=1&query=800+SE+Monterey+Rd+Stuart+FL" target="_blank">800 SE Monterey Rd, Stuart</a></div><div class="info"><span class="lbl">Ph:</span> <a href="tel:7722202100">(772) 220-2100</a></div><a href="https://www.martin.fl.us/sheriff" target="_blank" class="btn">Search</a></div>
+<div class="card"><h3>Okeechobee</h3><div class="info"><span class="lbl">Loc:</span> <a href="https://www.google.com/maps/search/?api=1&query=504+NW+4th+St+Okeechobee+FL" target="_blank">504 NW 4th St, Okeechobee</a></div><div class="info"><span class="lbl">Ph:</span> <a href="tel:8637636441">(863) 763-6441</a></div><a href="https://www.okeechobeeso.org" target="_blank" class="btn">Search</a></div>
+<div class="card"><h3>St. Lucie</h3><div class="info"><span class="lbl">Loc:</span> <a href="https://www.google.com/maps/search/?api=1&query=4700+W+Midway+Rd+Fort+Pierce+FL" target="_blank">4700 W Midway Rd, Fort Pierce</a></div><div class="info"><span class="lbl">Ph:</span> <a href="tel:7724628600">(772) 462-8600</a></div><a href="https://www.stluciesheriff.com" target="_blank" class="btn">Search</a></div>
+<div class="card"><h3>Union</h3><div class="info"><span class="lbl">Loc:</span> <a href="https://www.google.com/maps/search/?api=1&query=15200+SW+State+Rd+231+Lake+Butler+FL" target="_blank">15200 SW SR 231, Lake Butler</a></div><div class="info"><span class="lbl">Ph:</span> <a href="tel:3864961122">(386) 496-1122</a></div><a href="https://www.ucso.us" target="_blank" class="btn">Search</a></div>
+</div>
+</div>
+
+<!-- SOUTHEAST (10) -->
+<div class="region">
+<div class="region-header" onclick="toggle('se')"><div><h2>Southeast Florida</h2><span class="count">10</span></div><span class="arrow" id="a-se">▼</span></div>
+<div class="grid" id="se">
+<div class="card"><h3>Broward</h3><div class="info"><span class="lbl">Loc:</span> <a href="https://www.google.com/maps/search/?api=1&query=200+NW+27th+Ave+Fort+Lauderdale+FL" target="_blank">200 NW 27th Ave, Fort Lauderdale</a></div><div class="info"><span class="lbl">Ph:</span> <a href="tel:9545870500">(954) 587-0500</a></div><a href="https://www.sheriff.org" target="_blank" class="btn">Search</a></div>
+<div class="card"><h3>Miami-Dade</h3><div class="info"><span class="lbl">Loc:</span> <a href="https://www.google.com/maps/search/?api=1&query=7th+St+NW+12th+Ave+Miami+FL" target="_blank">7th St & NW 12th Ave, Miami</a></div><div class="info"><span class="lbl">Ph:</span> <a href="tel:7865451000">(786) 545-1000</a></div><a href="https://www.miamidade.gov/corrections" target="_blank" class="btn">Search</a></div>
+<div class="card"><h3>Monroe</h3><div class="info"><span class="lbl">Loc:</span> <a href="https://www.google.com/maps/search/?api=1&query=5501+College+Rd+Key+West+FL" target="_blank">5501 College Rd, Key West</a></div><div class="info"><span class="lbl">Ph:</span> <a href="tel:3052924470">(305) 292-4470</a></div><a href="https://www.keysso.net" target="_blank" class="btn">Search</a></div>
+<div class="card"><h3>Palm Beach</h3><div class="info"><span class="lbl">Loc:</span> <a href="https://www.google.com/maps/search/?api=1&query=3228+Gun+Club+Rd+West+Palm+Beach+FL" target="_blank">3228 Gun Club Rd, West Palm Beach</a></div><div class="info"><span class="lbl">Ph:</span> <a href="tel:5616886000">(561) 688-6000</a></div><a href="https://www.pbso.org" target="_blank" class="btn">Search</a></div>
+<div class="card"><h3>Putnam</h3><div class="info"><span class="lbl">Loc:</span> <a href="https://www.google.com/maps/search/?api=1&query=2701+State+Rd+20+Interlachen+FL" target="_blank">2701 State Rd 20, Interlachen</a></div><div class="info"><span class="lbl">Ph:</span> <a href="tel:3863297500">(386) 329-7500</a></div><a href="https://www.psinterlachen.com" target="_blank" class="btn">Search</a></div>
+<div class="card"><h3>Miami Metro (Corrections)</h3><div class="info"><span class="lbl">Loc:</span> <a href="https://www.google.com/maps/search/?api=1&query=1321+NW+13th+St+Miami+FL" target="_blank">1321 NW 13th St, Miami</a></div><div class="info"><span class="lbl">Ph:</span> <a href="tel:7865451000">(786) 545-1000</a></div><a href="https://www.miamidade.gov/corrections" target="_blank" class="btn">Search</a></div>
+<div class="card"><h3>Levy</h3><div class="info"><span class="lbl">Loc:</span> <a href="https://www.google.com/maps/search/?api=1&query=9150+NE+80th+Ave+Bronson+FL" target="_blank">9150 NE 80th Ave, Bronson</a></div><div class="info"><span class="lbl">Ph:</span> <a href="tel:3524866969">(352) 486-6969</a></div><a href="https://www.levyso.com" target="_blank" class="btn">Search</a></div>
+<div class="card"><h3>Madison</h3><div class="info"><span class="lbl">Loc:</span> <a href="https://www.google.com/maps/search/?api=1&query=229+SW+Pinckney+St+Madison+FL" target="_blank">229 SW Pinckney St, Madison</a></div><div class="info"><span class="lbl">Ph:</span> <a href="tel:8509733111">(850) 973-3111</a></div><a href="https://www.madisonso.com" target="_blank" class="btn">Search</a></div>
+<div class="card"><h3>Calhoun</h3><div class="info"><span class="lbl">Loc:</span> <a href="https://www.google.com/maps/search/?api=1&query=20859+Central+Ave+E+Blountstown+FL" target="_blank">20859 Central Ave E, Blountstown</a></div><div class="info"><span class="lbl">Ph:</span> <a href="tel:8506743049">(850) 674-3049</a></div><a href="https://www.calhouncountysheriff.net" target="_blank" class="btn">Search</a></div>
+<div class="card"><h3>Liberty</h3><div class="info"><span class="lbl">Loc:</span> <a href="https://www.google.com/maps/search/?api=1&query=10818+NW+SR+20+Bristol+FL" target="_blank">10818 NW SR 20, Bristol</a></div><div class="info"><span class="lbl">Ph:</span> <a href="tel:8506436270">(850) 643-6270</a></div><a href="https://www.libertycountyfl.com/sheriff" target="_blank" class="btn">Search</a></div>
+</div>
+</div>
+
+</div>
+
+<footer>
+<p><strong>Additional Resources:</strong></p>
+<p style="margin-top:10px;">
+<a href="http://www.dc.state.fl.us/offenderSearch/" target="_blank" style="color:#667eea;margin:0 10px;">Florida DOC</a> | 
+<a href="https://www.vinelink.com/" target="_blank" style="color:#667eea;margin:0 10px;">VINELink</a>
+</p>
+<p style="margin-top:10px;font-size:.85em;">Last Updated: January 2026 | All 67 Florida Counties</p>
+</footer>
+</div>
+
+<script>
+function toggle(id){
+const g=document.getElementById(id);
+const a=document.getElementById('a-'+id);
+if(g.classList.contains('show')){
+g.classList.remove('show');
+a.classList.remove('open');
+}else{
+g.classList.add('show');
+a.classList.add('open');
+}
+}
+</script>
+</body>
+</html>
